[gd_scene load_steps=7 format=3 uid="uid://btcq8waycui13"]

[ext_resource type="Script" path="res://World/battle.gd" id="1_bxoir"]
[ext_resource type="PackedScene" uid="uid://17uvdl8q4dts" path="res://Characters/player.tscn" id="2_8l50o"]

[sub_resource type="Animation" id="Animation_oua4i"]
resource_name = "Attack"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Player:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(248, 440), Vector2(328, 432), Vector2(248, 440)]
}

[sub_resource type="Animation" id="Animation_tuoju"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Player:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(248, 440)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Player:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(15, 15)]
}

[sub_resource type="Animation" id="Animation_o6fb8"]
resource_name = "Defend"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Player:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(15, 15), Vector2(13, 15), Vector2(13, 19), Vector2(15, 15)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ttkas"]
_data = {
"Attack": SubResource("Animation_oua4i"),
"Defend": SubResource("Animation_o6fb8"),
"RESET": SubResource("Animation_tuoju")
}

[node name="Battle" type="Node2D"]
script = ExtResource("1_bxoir")

[node name="Polygon2D" type="Polygon2D" parent="."]
visible = false
color = Color(0.666667, 0.682353, 0.556863, 1)
polygon = PackedVector2Array(64, 272, 64, 608, 440, 608, 440, 272)

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="Polygon2D2" type="Polygon2D" parent="."]
visible = false
position = Vector2(48, -120)
color = Color(0.447059, 0.0941176, 0.0901961, 1)
polygon = PackedVector2Array(792, 456, 736, 456, 672, 384, 672, 272, 744, 272, 888, 136, 1088, 312, 968, 456)

[node name="PlayerHealth" type="ProgressBar" parent="."]
offset_left = 120.0
offset_top = 168.0
offset_right = 368.0
offset_bottom = 195.0
step = 1.0
value = 100.0

[node name="EnemyHealth" type="ProgressBar" parent="."]
offset_left = 776.0
offset_top = 352.0
offset_right = 1024.0
offset_bottom = 379.0
max_value = 10.0
step = 1.0
value = 10.0

[node name="GridContainer" type="GridContainer" parent="."]
offset_left = 672.0
offset_top = 496.0
offset_right = 866.0
offset_bottom = 576.0
theme_override_constants/h_separation = 7
theme_override_constants/v_separation = 4
columns = 3

[node name="Attack" type="Button" parent="GridContainer"]
layout_mode = 2
text = "Attack"

[node name="Defend" type="Button" parent="GridContainer"]
layout_mode = 2
text = "Defend"

[node name="Scram" type="Button" parent="GridContainer"]
layout_mode = 2
text = "Scram"

[node name="Player" parent="." instance=ExtResource("2_8l50o")]
position = Vector2(248, 440)
scale = Vector2(15, 15)

[node name="BattleAnims" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ttkas")
}

[connection signal="pressed" from="GridContainer/Attack" to="." method="_on_attack_pressed"]
[connection signal="pressed" from="GridContainer/Defend" to="." method="_on_defend_pressed"]
[connection signal="pressed" from="GridContainer/Scram" to="." method="_on_scram_pressed"]
[connection signal="animation_finished" from="BattleAnims" to="." method="_on_battle_anims_animation_finished"]
